fixing typo caught by Smylers
git-svn-id: http://svn.pugscode.org/pugs@23113 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -688,7 +688,8 @@ after the name:
 
     sub lay returns Egg {...}
 
-On an anonymous subroutine, any return type can only go after the name:
+On an anonymous subroutine, any return type can only go after the C<sub>
+keyword:
 
     $lay = sub returns Egg {...};
 
