--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,7 +12,7 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Luke Palmer <luke@luqui.org>
   Date: 10 Aug 2004
-  Last Modified: 18 Aug 2004
+  Last Modified: 16 Sep 2004
   Number: 2
   Version: 0
 
@@ -332,7 +332,10 @@ expressions, but these have been replaced with interpolation of curlies
 =item *
 
 The current lexical symbol table may now be referenced through the
-pseudo-package C<MY>.
+pseudo-package C<MY>, or the corresponding variable C<%MY::>:
+
+    my $foo = 42;
+    say %MY::«$foo»;	# prints "42"
 
 =item *
 
@@ -356,8 +359,16 @@ is C<$*ERR>.
 
 =item *
 
-Magical file-scoped lexicals live in the C<=> package.  C<@=DATA> is
-the name of your DATA filehandle, for instance.
+Magical file-scoped values live in variables with a C<=> secondary
+sigil.  C<@=DATA> is the name of your C<DATA> filehandle, for instance.
+As with C<*>, the C<=> may also be used as a package name: C<$=::DATA>.
+
+=item *
+
+Magical lexically scoped values live in variables with a C<?>
+secondary sigil.  C<$?file> and C<$?line> are your current file and
+line number, for instance.  As with C<*>, the C<?> may also be used
+as a package name: C<$?::sub>.
 
 =back
 
@@ -510,7 +521,7 @@ split on whitespace still works out.
 
 Secondary sigils have no influence over whether the primary sigil
 interpolates.  That is, if C<$a> interpolates, so do C<$^a>, C<$*a>,
-C<$=a>, C<$.a>, and C<$:a>.  It only depends on the C<$>.
+C<$=a>, C<$?a>, C<$.a>, and C<$:a>.  It only depends on the C<$>.
 
 =item *
 
@@ -599,9 +610,9 @@ The double-underscore forms are going away:
 
     Old                 New
     ---                 ---
-    __LINE__            $=line
-    __FILE__            $=file
-    __PACKAGE__         $=package
+    __LINE__            $?line
+    __FILE__            $?file
+    __PACKAGE__         $?package
     __END__             =begin END
     __DATA__            =begin DATA
 
@@ -611,9 +622,14 @@ stream is no longer special--any POD stream in the current file
 can be accessed via a filehandle, named as C<%=«DATA»> and such.
 Alternately, you can treat a pod stream as a scalar via C<$=DATA>
 or as an array via C<@=DATA>.  Presumably a module could read all
-its COMMENT blocks from C<@=COMMENT>, for instance.
+its COMMENT blocks from C<@=COMMENT>, for instance.  Each chunk of
+pod comes as a separate array element.  You have to split it into lines
+yourself.  Each chunk has a C<.linenum> property that indicates its
+starting line within the source file.
 
-There is also a new C<$=sub> variable containing the current lexical sub.
+There is also a new C<$?sub> variable containing the name of current
+lexical sub.  The lexical sub itself is C<&?sub>.  The current block
+is C<&?block>.  If the block has a label, that shows up in C<$?block>.
 
 =item *
 
